--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.6.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sweetalert2": "^11.3.0"
