--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "accounting": "^0.4.1",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
@@ -22,6 +24,7 @@
     "react-slideshow-image": "^3.6.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "sweetalert2": "^11.3.0"
   },
   "scripts": {
