trabajando en login-firebase

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "dotenv": "^10.0.0",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.6.0",
+    "reactfire": "^4.2.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
