--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,12 @@
     "accounting": "^0.4.1",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
     "dotenv": "^10.0.0",
     "firebase": "^9.6.1",
+    "install": "^0.13.0",
+    "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
